; ModuleID = '/home/carl/AnghaBench/linux/kernel/rcu/extr_tree.c_rcu_barrier_callback.c'
source_filename = "/home/carl/AnghaBench/linux/kernel/rcu/extr_tree.c_rcu_barrier_callback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32, i32 }
%struct.rcu_head = type { i32 }

@rcu_state = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@.str = private unnamed_addr constant [7 x i8] c"LastCB\00", align 1
@.str.1 = private unnamed_addr constant [3 x i8] c"CB\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.rcu_head*)* @rcu_barrier_callback to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @rcu_barrier_callback(%struct.rcu_head* %0) #0 {
  %2 = alloca %struct.rcu_head*, align 8
  store %struct.rcu_head* %0, %struct.rcu_head** %2, align 8
  %3 = call i64 @atomic_dec_and_test(i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @rcu_state, i32 0, i32 2))
  %4 = icmp ne i64 %3, 0
  br i1 %4, label %5, label %10

5:                                                ; preds = %1
  %6 = call i32 @TPS(i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0))
  %7 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @rcu_state, i32 0, i32 0), align 4
  %8 = call i32 @rcu_barrier_trace(i32 %6, i32 -1, i32 %7)
  %9 = call i32 @complete(i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @rcu_state, i32 0, i32 1))
  br label %14

10:                                               ; preds = %1
  %11 = call i32 @TPS(i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.1, i64 0, i64 0))
  %12 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @rcu_state, i32 0, i32 0), align 4
  %13 = call i32 @rcu_barrier_trace(i32 %11, i32 -1, i32 %12)
  br label %14

14:                                               ; preds = %10, %5
  ret void
}

declare dso_local i64 @atomic_dec_and_test(i32*) #1

declare dso_local i32 @rcu_barrier_trace(i32, i32, i32) #1

declare dso_local i32 @TPS(i8*) #1

declare dso_local i32 @complete(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
